# TelescopeMirrorTester

./: .gitignore  README.md
CAD/: ArduinoMount.FCStd  ArduinoMount.FCStd1  Translation_Stage_XYZ.FCStd  Translation_Stage_XYZ_b.FCStd
CAD/Assemblies/: Adjusting_screw_assembly_Colapsed.FCStd  Arduino_Mega_mount.FCStd  Base_X_Translation_Assembly_w_Motor.FCStd  Base_X_Translation_Assembly_w_Motor.FCStd1  Base_Z_Translation_Assembly_w_Micrometer_Motor.FCStd  Bearing_support_vertical.FCStd  Bearing_support_vertical.FCStd1  Bushing_support.FCStd1  DC_Motor_Assembly.FCStd  Elevation_Plate_Assembly.FCStd  Encoder_KFL08.FCStd  Foucault_test_head.FCStd  Foucault_test_head_extra_improved.FCStd  Foucault_test_head_improved.FCStd  Knob_support.FCStd  Knob_support.FCStd1  Knob_support_alternative.FCStd  Knob_support_alternative.FCStd1  Limit_Switch_Board.FCStd1  Mid_X_Translation_Assembly.FCStd1  Position_screw_assembly_vertical.FCStd1  Position_screw_assembly_w_Motor.FCStd  Position_screw_assembly_w_Motor.FCStd1  Position_screw_assembly_w_Motor_Improved.FCStd  Position_screw_assembly_w_Stepper_Motor.FCStd  Supported_Nut.FCStd1  Supported_Nut_Horizontal.FCStd1  Supported_Nut_Horizontal_alternative.FCStd  Translation_axis_150mm.FCStd  Translation_axis_150mm_25mm.FCStd  Translation_axis_200mm_25mm.FCStd  X_Translation_Assembly_w_Micrometer.FCStd  Y_Translation_Assembly.FCStd  Z_Translation_Assembly.FCStd1
CAD/CAD files/: CXHW-D-D16-d4-e8.step  CXHY-15-d4-e8.step  CXJJ-D-D16-d3-e8.step  Encoder_KP08-EncoderMountBack.iges  Encoder_KP08-EncoderMountBack.step  Encoder_KP08-EncoderMountFront.iges  Encoder_KP08-EncoderMountFront.step  KP08.stp  Limit_Switch_Board-Limit_Switch_PCB_Body.iges  Position_screw_assembly_w_Motor_Improved-Translation_support.iges  T8 nut.STEP  Translation_Stage_XYZ_b-Base_Plate.step  Translation_Stage_XYZ_b-Elevation_PlatePad002.step  Translation_Stage_XYZ_b-Foot.step  Translation_Stage_XYZ_b-Foot001.iges  Translation_Stage_XYZ_b-Foot003.iges  UM90S.FCStd  Y_Translation_Assembly-Motor_Mount.iges  Y_Translation_Assembly-Stabilizer.iges  Y_Translation_Assembly-Stabilizer001.iges
CAD/Micrometer/: Micrometer_Assembly_25mm.FCStd  Micrometer_Assembly_25mm.FCStd1  Micrometer_Plunger.FCStd1
CAD/Misc/: 4040_profile.FCStd  Belt_Size_Test.FCStd1  Bushing.FCStd  Bushing_3mm.FCStd  Camera.FCStd  Camera_Mount.FCStd  DC_Motor.FCStd  DC_Motor.FCStd1  Disc_Magnet_6x3.FCStd  GT2_16_pulley.FCStd  GT2_16_pulley.FCStd1  GT2_20_pulley.FCStd  GT2_20_pulley.FCStd1  GT2_40_pulley.FCStd  Handle.FCStd1  Hex_Nut_Small.FCStd  Hex_Nut_Small.FCStd1  Hex_Spacer_Nut.FCStd  Hex_Spacer_Nut_Small.FCStd  Knife.FCStd  Knife.FCStd1  Knife_long.FCStd  Light_source_laser_pcb.FCStd1  M5_Washer.FCStd  Nema 11.FCStd
CAD/Rail support/: KFL008.FCStd1  KFL08.FCStd  Rod_100mm.FCStd  Rod_150mm.FCStd  Rod_200mm.FCStd  Rod_70mm.FCStd  SK8.FCStd  T8_nut.FCStd1
ECAD/BDCMotorControlBoard/: BDCMotorControlBoard.kicad_pcb  BDCMotorControlBoard.kicad_prl  BDCMotorControlBoard.kicad_pro  (+9 more)
Firmware/: AVRToolchain.cmake  CMakeLists - Cópia.txt  CMakeLists.txt  CMakeLists_.txt  README.md
Firmware/_Deprecated/boards/arm/telescope_mirror_tester/: board.cmake  telescope_mirror_tester.dts
Firmware/_Deprecated/mcp4716_driver_module/zephyr/: CMakeLists.txt
Firmware/_Deprecated/src/: main.c
Firmware/cmake/: AVRToolchain.cmake  CMakeLists.txt
Firmware/doc/: Motor Control.docx
Firmware/hal/: CMakeLists.txt  adc.c  adc.h  cbuffer.c  cbuffer.h  circ_buffer.c  circ_buffer.h  timer0_clk.c  timer0_clk.h  timer1_nec.c  timer1_nec.h  timer1_rc5.c  timer1_rc5.h  timer2_pwm.c  timer2_pwm.h  twi_master.c  twi_master.h  uart.c  uart.h
Firmware/lib/wait/: wait.c
Firmware/libs/: CMakeLists.txt
Firmware/libs/cbuffer/: CMakeLists.txt
Firmware/libs/cli/: CMakeLists.txt  cli.c  cli.h  cli_defs.h
Firmware/libs/indicatorLED/: CMakeLists.txt  indicator_led.c  indicator_led.h
Firmware/libs/limitSwitch/: CMakeLists.txt  limit_switch.c  limit_switch.h
Firmware/libs/motorControl/: CMakeLists.txt  motor_control.c  motor_control.h
Firmware/libs/necIr/: CMakeLists.txt  nec_ir.c  nec_ir.h
Firmware/libs/pca9535/: CMakeLists.txt  pca9535.c  pca9535.h
Firmware/libs/versionInfo/: firmwareBuildInfo.c.in
Firmware/source/lib/wait/: wait.h
Firmware/src/: CMakeLists.txt  cli_commands.c  cli_commands.h  firmware_version.c.in  firmware_version.h  ir_remote.c  ir_remote.h  main.c  main.h
Firmware/src/libs/: CMakeLists.txt
Firmware/src/libs/buildInfo/: CMakeLists.txt  firmwareBuildInfo.c.in  firmwareBuildInfo.h
Firmware/src/libs/hal/: CMakeLists.txt  hal.c
Firmware/src/libs/versionInfo/: CMakeLists.txt  firmwareBuildInfo.c.in
Software/: README.md  requirements.txt
Source/: Mirror.py  TelescopeMirrorTester.py
Tester/Firmware/: .~lock.SerialCommands.ods#  CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  SerialCommands.ods  main.c  prj.conf  telescope_mirror_tester.dts  telescope_mirror_tester.yaml
Tester/Firmware/_Deprecated/: prj.conf
Tester/Firmware/_Deprecated/boards/arm/telescope_mirror_tester/doc/: index.rst
Tester/Firmware/_Deprecated/mcp4716_driver_module/zephyr/: dac_mcp4716.c
Tester/Firmware/arduino_test_sketch/: arduino_test_sketch.ino
Tester/Firmware/boards/arm/telescope_mirror_tester/: Kconfig.defconfig  pinmux.c  telescope_mirror_tester.dts  telescope_mirror_tester_defconfig
Tester/Firmware/drivers/: CMakeLists.txt  Kconfig
Tester/Firmware/drivers/dac/mcp4716/: CMakeLists.txt  dac_mcp4716.c
Tester/Firmware/drivers/sensor/: CMakeLists.txt  Kconfig
Tester/Firmware/dts/bindings/dac/: microchip,mcp4716.yaml
Tester/Firmware/mcp4716_driver_module/zephyr/: CMakeLists.txt  Kconfig  dac_mcp4716.c
Tester/Firmware/pmw3360_driver_module/Zephyr/: CMakeLists.txt  Kconfig  pmw3360.c
Tester/Firmware/pmw3360_driver_module/zephyr/: pmw3360.c  pmw3360.h
Tester/Firmware/src/: main.c
Tester/Firmware/src/command_parser/: command_parser.c  command_parser.h
Tester/Firmware/support/: openocd.cfg
_Deprecated/Firmware/: CMakeLists.txt
_Deprecated/Firmware/dts/bindings/dac/: microchip,mcp4716.yaml
(+595 files in other folders)
